--- a/Resources/Views/ViewControllers/AccountSelectionViewController.xib
+++ b/Resources/Views/ViewControllers/AccountSelectionViewController.xib
@@ -38,12 +38,9 @@
 				<reference key="NSSuperview"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MQA</bytes>
-					<object class="NSColorSpace" key="NSCustomColorSpace">
-						<int key="NSID">2</int>
-					</object>
+					<bytes key="NSWhite">MC45OTYzNTAzNQA</bytes>
 				</object>
-				<float key="IBUIAlpha">5.000000e-01</float>
+				<float key="IBUIAlpha">4.295775e-01</float>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 			</object>
 		</object>
