--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -8,6 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="40"/>
 			<integer value="52"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
@@ -46,6 +47,7 @@
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 			</object>
 			<object class="IBUIViewController" id="223062276">
+				<string key="IBUINibName">AccountManagerViewController</string>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 			</object>
 			<object class="IBUIViewController" id="875590562">
@@ -109,11 +111,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">accountSelectionViewController</string>
+						<string key="label">accountManagerViewController</string>
 						<reference key="source" ref="664661524"/>
 						<reference key="destination" ref="223062276"/>
 					</object>
-					<int key="connectionID">53</int>
+					<int key="connectionID">55</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -226,7 +228,7 @@
 					<string>EditAccountViewController</string>
 					<string>{{42, 319}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>AccountSelectionViewController</string>
+					<string>AccountManagerViewController</string>
 					<string>{{0, 365}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
@@ -251,17 +253,17 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">53</int>
+			<int key="maxID">55</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">AccountSelectionViewController</string>
+					<string key="className">AccountManagerViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/Views/Accounts/AccountSelectionViewController.h</string>
+						<string key="minorKey">Classes/Views/Accounts/AccountManagerViewController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -408,7 +410,7 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>accountSelectionViewController</string>
+							<string>accountManagerViewController</string>
 							<string>editAccountViewController</string>
 							<string>historyViewController</string>
 							<string>rosterViewController</string>
@@ -416,7 +418,7 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>AccountSelectionViewController</string>
+							<string>AccountManagerViewController</string>
 							<string>EditAccountViewController</string>
 							<string>HistoryViewController</string>
 							<string>RosterViewController</string>
